# bebop_simulator

./: .gitignore  README.md
bebop_identification/: CMakeLists.txt  bebop_identifier_pitch.cpp  bebop_identifier_roll.cpp  bebop_identifier_vertical_speed.cpp  bebop_identifier_yaw_speed.cpp  package.xml
bebop_identification/identification_data/: monster_pitch_sys.m  monster_roll_sys.m  monster_vert_sys.m  monster_yawr_sys.m  pitch_sys.m  vert_sys.m  yawr_sys.m  yawr_sys.m~
bebop_identification/identification_data/models/: models.txt
bebop_identification/identification_result/: plot_3d_obj.m  results.txt  test.m  test.m~  test_with_yaw.m
bebop_mpc/: CMakeLists.txt  bebop_mpc_node.cpp  package.xml
ground_control/: CMakeLists.txt  ground_control_node.cpp  package.xml
ground_control/launch/: joystick_node.launch  joystick_node_mpc.launch
identification_data/: roll_sys.m  vert_sys.m
img/: output_equation.txt  pitch_model.txt  roll_model.txt  state_equation.txt
mpc_flight_controller/: README.md
mpc_flight_controller/generator/: CMakeLists.txt  mpc_flight_controller
mpc_flight_controller/generator (copy)/: mpc_flight_controller
mpc_flight_controller/generator (copy)/mpc_flight_controller_export/: acado_common.h  acado_integrator.c  acado_solver.c
mpc_flight_controller/generator (copy)/src/: mpc_flight_controller.cpp
mpc_flight_controller/generator _new/: mpc_flight_controller
mpc_flight_controller/generator _new/mpc_flight_controller_export/: acado_common.h  acado_hessian_regularization.c  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
mpc_flight_controller/generator _new/src/: mpc_flight_controller.cpp
mpc_flight_controller/generator/mpc_flight_controller_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
mpc_flight_controller/generator/src/: mpc_flight_controller.cpp
mpc_flight_controller/generator_3d/: CMakeLists.txt  mpc_flight_controller
mpc_flight_controller/generator_3d/mpc_flight_controller_export/: acado_common.h  acado_integrator.c  acado_solver.c
mpc_flight_controller/generator_3d/src/: mpc_flight_controller.cpp
mpc_flight_controller/generator_3d_fov/: mpc_flight_controller
mpc_flight_controller/generator_baseline/: mpc_flight_controller
mpc_flight_controller/generator_baseline_cov/: mpc_flight_controller
mpc_flight_controller/mpc_solver/: CMakeLists.txt  test.cpp
mpc_flight_controller/test/: CMakeLists.txt  test.cpp
mpc_flight_controller/test/exportFolder/: acado_solver.c
scripts/: Reset.sh  Start.sh
sphinx_data_logger/: CMakeLists.txt  package.xml  sphinx_data_logger.cpp
(+15 files in other folders)
